--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -1,17 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  meal_type: MyString
-  calories: 1
-  proteins: 1
-  carbohydrates: MyString
-  integer: MyString
-  fats: 1
+breakfast:
+  meal_type: "Breakfast"
+  calories: 500
+  proteins: 80
+  carbohydrates: 200 
+  fats: 300
 
-two:
-  meal_type: MyString
-  calories: 1
-  proteins: 1
-  carbohydrates: MyString
-  integer: MyString
-  fats: 1
+lunch:
+  meal_type:  "Lunch"
+  calories: 150
+  proteins: 10
+  carbohydrates: 2
+  fats: 100
